#3152 added the init parameters including the new LOG parameter to the manual.

--- a/doc/Deliverables/BW4Tv3Manual/Structure/structure.tex
+++ b/doc/Deliverables/BW4Tv3Manual/Structure/structure.tex
@@ -3,3 +3,4 @@
 \input{Structure/serverchanges}
 \input{Structure/mapscomparison}
 %\input{Structure/backwardscompatibility}
+\input{Structure/initparams}
