#3154 updated manual explaining message 'all' target

--- a/doc/Deliverables/BW4Tv3Manual/NewFeatures/hpg.tex
+++ b/doc/Deliverables/BW4Tv3Manual/NewFeatures/hpg.tex
@@ -135,6 +135,7 @@ A picture of the Message Panel can be found in figure ~\ref{fig:mp1}. The second
 
 \textbf{Select message receiver}
 To select who a message needs to be sent to, click on the dropdown box (Figure ~\ref{fig:receiverDropDown}) at $Send$ $message$ $to:$. The receiver is by default $all$.
+When set to $all$, all other bots receive the message. When set to a specific bot, only that bot receives the message.
 \\
 \begin{figure}[h]
 \begin{center}
