#3198 updated manual regarding max bot speed.

--- a/doc/Deliverables/BW4Tv3Manual/NewFeatures/se.tex
+++ b/doc/Deliverables/BW4Tv3Manual/NewFeatures/se.tex
@@ -96,7 +96,7 @@ To delete an e-partner, select the e-partner that needs to be deleted in the e-p
 A picture of the Bot Store can be found in figure ~\ref{fig:bs}.\\\\
 \begin{figure}[h]
 \begin{center}
-\includegraphics{NewFeatures/bs.png}
+\includegraphics[width=0.5\linewidth]{NewFeatures/bs.png}
 \end{center}
 \caption{Bot Store}
 \label{fig:bs}
