#3222 meged the environment store with the instructions manual

--- a/doc/Deliverables/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/Deliverables/BW4T3Instructions/BW4T3_instructions.tex
@@ -423,4 +423,6 @@ Logs are written to the file as soon as possible, so that information won't get 
 
 \include{EnvironmentStore/EnvStoreDoc}
 
+\include{ScenarioEditor/ScenarioEditorManual}
+
 \end{document}
